# wagtail-grapple-gatsby

./: README.md
backend/: pyproject.toml
backend/backend/: urls.py
backend/backend/settings/: base.py  dev.py
backend/home/: models.py
backend/home/migrations/: 0003_blogpage.py
frontend/: gatsby-config.js  gatsby-node.js  package-lock.json  package.json
frontend/src/templates/: blog.js
